--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ button {
 @media (min-width: 450px) {
     .main__tabInfo {
         margin-top: -7rem;
-        max-width: 400px;
+        max-width: 500px;
         margin: auto;
     }
 }
@@ -565,7 +565,7 @@ input[type="radio"]:checked~.step2__radiobutton {
 
     .step__relative {
         width: 300px;
-        height: 170px;
+        height: 160px;
     }
 
     .step2__radiobutton {
@@ -578,6 +578,13 @@ input[type="radio"]:checked~.step2__radiobutton {
     .check__title {
         font-size: 10px;
         font-weight: 600;
+    }
+    .checkbox__flex {
+        margin-top: .2rem;
+        display: flex;
+        gap: 2rem;
+        align-items: center;
+        justify-content: center;
     }
 
     .button {
